Set body width so avoid white bars on smaller screens.

--- a/nomad-narratives-frontend/src/App.module.css
+++ b/nomad-narratives-frontend/src/App.module.css
@@ -4,8 +4,10 @@
     min-height: 100vh;
 }
 
+
 body {
     height: 100vh;
+    width: 100vw;
 }
 
 .Main {
